kubernetes/apps/network/envoy-gateway/config/internal-test.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal-test
  labels:
    role: test
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: default-private-certificate-test
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-internal-test
spec:
  parentRefs:
    - name: envoy-internal-test
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-test-redirects
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      matchLabels:
        role: test
  responseOverride:
    - match:
        statusCodes:
          - type: Range
            range:
              end: 510
              start: 500
      redirect:
        scheme: https
        hostname: whoami.movishell.pl
        path:
          type: ReplaceFullPath
          replaceFullPath: /
        statusCode: 302
    - match:
        statusCodes:
          - type: Range
            range:
              end: 410
              start: 400
      redirect:
        scheme: https
        hostname: whoami.movishell.pl
        path:
          type: ReplaceFullPath
          replaceFullPath: /
        statusCode: 302
