kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      ui:
        hide-hostname: true
        hide-url: true
      alerts:
        - type: pushover
          send-on-resolved: true
  labels:
    type: internal
spec:
  allowedListeners:
    namespaces:
      from: All
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: default-private-certificate
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
