kubernetes/apps/network/envoy-gateway/config/listenerset.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-301
spec:
  parentRefs:
    - kind: XListenerSet
      name: http-debug-listener-public
      sectionName: http
    - kind: XListenerSet
      name: http-debug-listener-private
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
